force-app/main/default/objects/Update_Client__e/Update_Client__e.object-meta.xml
<CustomObject>
    <label>Update Client</label>
    <pluralLabel>Update Clients</pluralLabel>
</CustomObject>