force-app/main/default/objects/Update_Client__e/fields/Address_District__c.field-meta.xml
<CustomField>
    <fullName>Address_District__c</fullName>
    <label>Address District</label>
    <length>100</length>
    <type>Text</type>
</CustomField>