force-app/main/default/objects/Update_Client__e/fields/Age_Group__c.field-meta.xml
<CustomField>
    <fullName>Age_Group__c</fullName>
    <label>Age Group</label>
    <length>7</length>
    <type>Text</type>
</CustomField>