force-app/main/default/objects/Update_Client__e/fields/Billing_Region__c.field-meta.xml
<CustomField>
    <fullName>Billing_Region__c</fullName>
    <label>Address Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>