force-app/main/default/objects/Update_Client__e/fields/Billing_State_County__c.field-meta.xml
<CustomField>
    <fullName>Billing_State_County__c</fullName>
    <label>Address State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>