force-app/main/default/objects/Update_Client__e/fields/BillingCity__c.field-meta.xml
<CustomField>
    <fullName>BillingCity__c</fullName>
    <label>Address City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>