force-app/main/default/objects/Update_Client__e/fields/BillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>BillingPostalCode__c</fullName>
    <label>Address Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>