force-app/main/default/objects/Update_Client__e/fields/BillingState__c.field-meta.xml
<CustomField>
    <fullName>BillingState__c</fullName>
    <label>Address Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>