force-app/main/default/objects/Update_Client__e/fields/BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>BillingStreet__c</fullName>
    <label>Address Street</label>
    <length>120</length>
    <type>Text</type>
</CustomField>