force-app/main/default/objects/Update_Client__e/fields/Birthdate_Day__c.field-meta.xml
<CustomField>
    <fullName>Birthdate_Day__c</fullName>
    <label>Birthdate Day</label>
    <length>2</length>
    <type>Text</type>
</CustomField>