force-app/main/default/objects/Update_Client__e/fields/Birthdate_Month__c.field-meta.xml
<CustomField>
    <fullName>Birthdate_Month__c</fullName>
    <label>Birthdate Month</label>
    <length>2</length>
    <type>Text</type>
</CustomField>