force-app/main/default/objects/Update_Client__e/fields/Birthdate_Year__c.field-meta.xml
<CustomField>
    <fullName>Birthdate_Year__c</fullName>
    <label>Birthdate Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>