force-app/main/default/objects/Update_Client__e/fields/Certified_Email__c.field-meta.xml
<CustomField>
    <fullName>Certified_Email__c</fullName>
    <label>Certified Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>