force-app/main/default/objects/Update_Client__e/fields/Customer_Class__c.field-meta.xml
<CustomField>
    <fullName>Customer_Class__c</fullName>
    <label>Customer Class</label>
    <length>20</length>
    <type>Text</type>
</CustomField>