force-app/main/default/objects/Update_Client__e/fields/Discount_enabled__c.field-meta.xml
<CustomField>
    <fullName>Discount_enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discount enabled</label>
    <type>Checkbox</type>
</CustomField>