force-app/main/default/objects/Update_Client__e/fields/Discount_Group__c.field-meta.xml
<CustomField>
    <fullName>Discount_Group__c</fullName>
    <label>Discount Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>