force-app/main/default/objects/Update_Client__e/fields/Dynamics__c.field-meta.xml
<CustomField>
    <fullName>Dynamics__c</fullName>
    <label>Dynamics ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>