force-app/main/default/objects/Update_Client__e/fields/Fiscal_Code__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Code__c</fullName>
    <label>Fiscal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>