force-app/main/default/objects/Update_Client__e/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Gender</label>
    <length>38</length>
    <type>Text</type>
</CustomField>