force-app/main/default/objects/Update_Client__e/fields/isCustomeranEmployee__c.field-meta.xml
<CustomField>
    <fullName>isCustomeranEmployee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Customer An Employee</label>
    <type>Checkbox</type>
</CustomField>