force-app/main/default/objects/Update_Client__e/fields/Last_Name_Local__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_Local__c</fullName>
    <label>Last Name Local</label>
    <length>100</length>
    <type>Text</type>
</CustomField>