force-app/main/default/objects/Update_Client__e/fields/Legal_Entity_employee__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_employee__c</fullName>
    <label>Legal Entity (employee)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>