force-app/main/default/objects/Update_Client__e/fields/Marketing_HQ__c.field-meta.xml
<CustomField>
    <fullName>Marketing_HQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing HQ Consent</label>
    <type>Checkbox</type>
</CustomField>