force-app/main/default/objects/Update_Client__e/fields/Marketing_HQ_Date__c.field-meta.xml
<CustomField>
    <fullName>Marketing_HQ_Date__c</fullName>
    <label>Marketing HQ Date</label>
    <type>DateTime</type>
</CustomField>