force-app/main/default/objects/Update_Client__e/fields/Marketing_PRC__c.field-meta.xml
<CustomField>
    <fullName>Marketing_PRC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing PRC Consent</label>
    <type>Checkbox</type>
</CustomField>