force-app/main/default/objects/Update_Client__e/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <label>Nationality</label>
    <length>100</length>
    <type>Text</type>
</CustomField>