force-app/main/default/objects/Update_Client__e/fields/Orce_ID__c.field-meta.xml
<CustomField>
    <fullName>Orce_ID__c</fullName>
    <label>Orce ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>