force-app/main/default/objects/Update_Client__e/fields/PersonEmail__c.field-meta.xml
<CustomField>
    <fullName>PersonEmail__c</fullName>
    <label>PersonEmail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>