force-app/main/default/objects/Update_Client__e/fields/PersonMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>PersonMobilePhone__c</fullName>
    <label>Mobile Phone</label>
    <length>10</length>
    <type>Text</type>
</CustomField>