force-app/main/default/objects/Update_Client__e/fields/PersonMobilePhone_Prefix__c.field-meta.xml
<CustomField>
    <fullName>PersonMobilePhone_Prefix__c</fullName>
    <label>Mobile Phone Prefix</label>
    <length>4</length>
    <type>Text</type>
</CustomField>