force-app/main/default/objects/Update_Client__e/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Telephone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>