force-app/main/default/objects/Update_Client__e/fields/Phone_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Phone_Prefix__c</fullName>
    <label>Phone Prefix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>