force-app/main/default/objects/Update_Client__e/fields/Privacy_HQ__c.field-meta.xml
<CustomField>
    <fullName>Privacy_HQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Privacy HQ Cosent</label>
    <type>Checkbox</type>
</CustomField>