force-app/main/default/objects/Update_Client__e/fields/Privacy_Knowledge_Date__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Knowledge_Date__c</fullName>
    <label>Privacy Knowledge Date</label>
    <type>DateTime</type>
</CustomField>