force-app/main/default/objects/Update_Client__e/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Profession</label>
    <type>Checkbox</type>
</CustomField>