force-app/main/default/objects/Update_Client__e/fields/Profiling_HQ__c.field-meta.xml
<CustomField>
    <fullName>Profiling_HQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Profiling HQ Consent</label>
    <type>Checkbox</type>
</CustomField>