force-app/main/default/objects/Update_Client__e/fields/Profiling_PRC__c.field-meta.xml
<CustomField>
    <fullName>Profiling_PRC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Profiling PRC Consent</label>
    <type>Checkbox</type>
</CustomField>