force-app/main/default/objects/Update_Client__e/fields/Recipient_Code__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Code__c</fullName>
    <label>Recipient Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>