force-app/main/default/objects/Update_Client__e/fields/Salutation_Code__c.field-meta.xml
<CustomField>
    <fullName>Salutation_Code__c</fullName>
    <label>Salutation Code</label>
    <length>9</length>
    <type>Text</type>
</CustomField>