force-app/main/default/objects/Update_Client__e/fields/Tech_Source_LastUpdate__c.field-meta.xml
<CustomField>
    <fullName>Tech_Source_LastUpdate__c</fullName>
    <label>Tech Source Last Update</label>
    <length>50</length>
    <type>Text</type>
</CustomField>