force-app/main/default/objects/Update_Client__e/fields/Vat_Registration__c.field-meta.xml
<CustomField>
    <fullName>Vat_Registration__c</fullName>
    <label>Vat Registration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>