force-app/main/default/objects/Update_Client__e/fields/VIP_end_date__c.field-meta.xml
<CustomField>
    <fullName>VIP_end_date__c</fullName>
    <label>VIP end date</label>
    <type>DateTime</type>
</CustomField>