force-app/main/default/objects/Update_Client__e/fields/VIP_start_date__c.field-meta.xml
<CustomField>
    <fullName>VIP_start_date__c</fullName>
    <label>VIP start date</label>
    <type>DateTime</type>
</CustomField>