force-app/main/default/objects/Update_Client__e/fields/WorkDayId__c.field-meta.xml
<CustomField>
    <fullName>WorkDayId__c</fullName>
    <label>WorkDayId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>