force-app/main/default/objects/Update_Client__e/fields/XStore_Id__c.field-meta.xml
<CustomField>
    <fullName>XStore_Id__c</fullName>
    <label>Xstore PartyId code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>