force-app/main/default/objects/Update_Client__e/fields/Xstore_Language__c.field-meta.xml
<CustomField>
    <fullName>Xstore_Language__c</fullName>
    <label>Xstore Language</label>
    <length>100</length>
    <type>Text</type>
</CustomField>